Apply Quick Effect Crash Report #65399

Closed
opened 2019-06-01 17:32:56 +02:00 by kin malmin · 9 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.64

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-05-31 22:45, hash: cc600de669

Short description of error
[Applay the Smoke Modifier and press play and Blednmer will close]

Exact steps for others to reproduce the error

  1. Selcte the startup cube, or add a cube
  2. add the smok Qucik Effect to th ecube
    3.Apply the Smoke Modifier on the cube, not the smoke Domain
    4.Press Play Animation and Bledner will carch
    [Based on the default startup or an attached .blend file (Smoke1.blend)]
**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.64 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-05-31 22:45, hash: `cc600de669` **Short description of error** [Applay the Smoke Modifier and press play and Blednmer will close] **Exact steps for others to reproduce the error** 1. Selcte the startup cube, or add a cube 2. add the smok Qucik Effect to th ecube 3.Apply the Smoke Modifier on the cube, not the smoke Domain 4.Press Play Animation and Bledner will carch [Based on the default startup or an attached .blend file ([Smoke1.blend](https://archive.blender.org/developer/F7082083/Smoke1.blend))]
Author

Added subscriber: @DeadDrag0

Added subscriber: @DeadDrag0
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

Please do not triage your own ticket.

Please do not triage your own ticket.

Added subscriber: @matc

Added subscriber: @matc

I can confirm. I'm crashing at the end of the animation once the keyframe jumps back to 1. Or when selcting keyframe 0 and then keyframe 1.

If the file is saved and reloaded after applying the modifier, then the crash does not happen.

The crash happens in update_flowsfluids in smoke.c where modifiers_findByType(collob, eModifierType_Smoke) returns NULL for the Cube. Not sure why this would only happen for keyframe 1.

Removing the Smoke from the physics tab does not cause a crash. And it looks like this essentially all that Apply does.

I can confirm. I'm crashing at the end of the animation once the keyframe jumps back to 1. Or when selcting keyframe 0 and then keyframe 1. If the file is saved and reloaded after applying the modifier, then the crash does not happen. The crash happens in `update_flowsfluids` in `smoke.c` where `modifiers_findByType(collob, eModifierType_Smoke)` returns NULL for the Cube. Not sure why this would only happen for keyframe 1. Removing the Smoke from the physics tab does not cause a crash. And it looks like this essentially all that Apply does.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-06-03 10:21:06 +02:00
Member

BKE_collision_objects_create shouldnt return numflowobj=1 in that case.
Think we just need to inform DEG that relation has changed, checking...

`BKE_collision_objects_create` shouldnt return numflowobj=1 in that case. Think we just need to inform DEG that relation has changed, checking...

This issue was referenced by a2a05acb4a

This issue was referenced by a2a05acb4ae66cc4b1870cd05d652b5def66c75c
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65399
No description provided.