Fix T65399: crash playing animation after applying smoke flow modifier

missing DEG update.

Reviewers: sergey

Maniphest Tasks: T65399

Differential Revision: https://developer.blender.org/D4996